<resources>
    <string name="app_name">Galidog2</string>
    <string name="logo_centre_paul_corteville">Logo Centre Paul Corteville</string>
    <string name="logo_galidog">Logo Galidog</string>
    <string name="navigation">Navigation</string>
    <string name="m_morisation">Mémorisation</string>
    <string name="description">Description</string>
    <string name="ma_position">Ma position</string>
    <string name="liste">liste</string>
</resources>
